--- a/templates/testui.html
+++ b/templates/testui.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <script src="{{ url_for('static', filename= 'js/jquery.js') }}"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script> 
     <script src="{{ url_for('static', filename= 'js/jscolor.js') }}"></script>
     <script>
     $(document).ready(function(){
