--- a/templates/testui.html
+++ b/templates/testui.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script> 
-    <script src="{{ url_for('static', filename= 'js/jscolor.js') }}"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jscolor/2.5.1/jscolor.min.js"></script> 
     <script>
     $(document).ready(function(){
         $("#btn").click(function(){
